--- a/deployments/nginx.yaml
+++ b/deployments/nginx.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nats-deployment
+  name: nginx-deployment
 spec:
   selector:
     matchLabels:
-      app: nats-deployment
+      app: nginx-deployment
   replicas: 1
   template:
     metadata:
       labels:
-        app: nats-deployment
+        app: nginx-deployment
     spec:
       containers:
-        - name: nats-container
-          image: "nats"
+        - name: nginx-container
+          image: "nginx"
