--- a/services/nats.yaml
+++ b/services/nats.yaml
@@ -3,15 +3,15 @@ kind: Service
 metadata:
   name: nats
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
-    app: nats
+    app: nats-deployment
   ports:
     - protocol: TCP
-      name: client-ingress
+      name: nats-client-ingress
       port: 4222
       targetPort: 4222
     - protocol: TCP
-      name: service-ingress
+      name: nats-service-ingress
       port: 8222
       targetPort: 8222
