--- a/pvcs/general.yaml
+++ b/pvcs/general.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: general-disk
+  name: general-pvc
 spec:
   storageClassName: faster
   accessModes:
