--- a/statefulsets/influxdb.yaml
+++ b/statefulsets/influxdb.yaml
@@ -6,6 +6,7 @@ spec:
   selector:
     matchLabels:
       app: influxdb-statefulset
+  serviceName: influxdb-service
   replicas: 1
   template:
     metadata:
@@ -18,7 +19,7 @@ spec:
         image: influxdb:1.7
         ports:
         - containerPort: 8086
-          name: influxdb-consumer
+          name: ingress
         volumeMounts:
         - name: influxdb-data
           mountPath: /var/lib/influxdb
