--- a/services/nats.yaml
+++ b/services/nats.yaml
@@ -2,16 +2,18 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nats-service
+  labels:
+    app: nats-deployment
 spec:
   type: NodePort
   selector:
     app: nats-deployment
   ports:
-    - protocol: TCP
-      name: nats-client-ingress
-      port: 4222
-      targetPort: 4222
-    - protocol: TCP
-      name: nats-service-ingress
-      port: 8222
-      targetPort: 8222
+  - protocol: TCP
+    name: nats-client-ingress
+    port: 4222
+    targetPort: 4222
+  - protocol: TCP
+    name: nats-service-ingress
+    port: 8222
+    targetPort: 8222
