Remove general pvc, create influxdb pvc, update influxdb statefulset to use appropriate pvc.

--- a/pvcs/influxdb.yaml
+++ b/pvcs/influxdb.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: general-pvc
+  name: influxdb-pvc
 spec:
   storageClassName: faster
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 100Gi
+      storage: 10Gi
