Add appropriate resource requests and limits.

--- a/statefulsets/sotah-server-prod-pricelist-histories.yaml
+++ b/statefulsets/sotah-server-prod-pricelist-histories.yaml
@@ -36,6 +36,11 @@ spec:
           "-v", "debug",
           "prod-pricelist-histories"
         ]
+        resources:
+          requests:
+            cpu: 300m
+          limits:
+            cpu: 750m
         volumeMounts:
         - name: sotah-server-prod-pricelist-histories-data
           mountPath: /srv/databases
