Add transit deployment, service for handling traffic to chronograf.

--- a/services/chronograf.yaml
+++ b/services/chronograf.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: chronograf-service
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: chronograf-statefulset
   ports:
