--- a/services/chronograf.yaml
+++ b/services/chronograf.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: chronograf-service
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
     app: chronograf-statefulset
   ports:
