Update chronograf to use load-balancer rather than nodeport (for consistent ip.)

--- a/services/chronograf.yaml
+++ b/services/chronograf.yaml
@@ -1,15 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: chronograf-service
+  name: chronograf-lb-service
+  annotations:
+    cloud.google.com/load-balancer-type: "Internal"
   labels:
-    app: chronograf-service
+    app: chronograf-lb-service
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: chronograf-statefulset
   ports:
-  - protocol: TCP
-    name: ingress
-    port: 8888
-    targetPort: 8888
+    - protocol: TCP
+      name: ingress
+      port: 8888
+      targetPort: 8888
