--- a/services/chronograf.yaml
+++ b/services/chronograf.yaml
@@ -1,17 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: chronograf-lb-service
-  annotations:
-    cloud.google.com/load-balancer-type: "Internal"
+  name: chronograf-nodeport-service
   labels:
-    app: chronograf-lb-service
+    app: chronograf-nodeport-service
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: chronograf-statefulset
   ports:
-    - protocol: TCP
-      name: ingress
-      port: 8888
-      targetPort: 8888
+  - protocol: TCP
+    name: ingress
+    port: 8888
+    targetPort: 8888
