--- a/ingresses/main.yaml
+++ b/ingresses/main.yaml
@@ -2,6 +2,8 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: main-ingress
+  annotations:
+    kubernetes.io/ingress.global-static-ip-name: "main-ingress-ip"
 spec:
   rules:
     - http:
