--- a/configmaps/transit.env.example
+++ b/configmaps/transit.env.example
@@ -1,4 +1,5 @@
 DEST_HOSTNAME=
 DEST_PORT=
 HOSTNAME=
-http_x_forwarded_proto=\$http_x_forwarded_proto
+http_x_forwarded_proto=$http_x_forwarded_proto
+request_uri=$request_uri
