--- a/deployments/sotah-server-api.yaml
+++ b/deployments/sotah-server-api.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sotah-server-prod-metrics-deployment
+  name: sotah-server-api-deployment
 spec:
   selector:
     matchLabels:
-      app: sotah-server-prod-metrics-deployment
+      app: sotah-server-api-deployment
   replicas: 1
   template:
     metadata:
       labels:
-        app: sotah-server-prod-metrics-deployment
+        app: sotah-server-api-deployment
     spec:
       containers:
-      - name: sotah-server-prod-metrics-container
+      - name: sotah-server-prod-api-container
         image: "gcr.io/sotah-prod/server"
         env:
           - name: PROJECT_ID
@@ -30,7 +30,9 @@ spec:
                 key: NATS_PORT
         command: [
           "/go/bin/app",
-          "--cache-dir", "/tmp",
+          "--is-local",
+          "-c", "/tmp/sotah-server/config.json",
+          "--cache-dir", "/tmp/sotah-server/data",
           "-v", "debug",
-          "prod-metrics"
+          "api"
         ]
