--- a/deployments/nats-deployment.yaml
+++ b/deployments/nats-deployment.yaml
@@ -13,5 +13,5 @@ spec:
         app: nats-deployment
     spec:
       containers:
-        - name: nats-container
+        - name: nats-containers
           image: "nats"
