--- a/pvc/sotah-server-pvc.yaml
+++ b/pvc/sotah-server-pvc.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: sotah-server
+  name: sotah-server-pvc
 spec:
-  storageClassName: faster
+  storageClassName: ""
   accessModes:
     - ReadWriteOnce
   resources:
