--- a/services/sotah-server-clusterip.yaml
+++ b/services/sotah-server-clusterip.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sotah-server-clusterip
+  labels:
+    app: sotah-server-clusterip
 spec:
   type: ClusterIP
   clusterIP: None
