Update to use local-path storage provisioner.

--- a/pvc/sotah-server-pvc.yaml
+++ b/pvc/sotah-server-pvc.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: sotah-server-pvc
 spec:
-  storageClassName: ""
+  storageClassName: local-path
   accessModes:
     - ReadWriteOnce
   resources:
