Finish updating to use sotah-server-pvc.

--- a/statefulsets/sotah-server-statefulset.yaml
+++ b/statefulsets/sotah-server-statefulset.yaml
@@ -22,8 +22,8 @@ spec:
           command: [
               "/go/bin/app",
               "--is-local",
-              "-c", "/tmp/sotah-server/config.json",
-              "--cache-dir", "/srv/sotah-server",
+              "-c", "/srv/sotah-server/config.json",
+              "--cache-dir", "/srv/sotah-server/data",
               "-v", "debug",
               "api"
           ]
