Update sotah-server statefulset to integrate with nats clusterip service.

--- a/statefulsets/sotah-server-statefulset.yaml
+++ b/statefulsets/sotah-server-statefulset.yaml
@@ -27,6 +27,9 @@ spec:
               "-v", "debug",
               "api"
           ]
+          env:
+            - name: NATS_HOST
+              value: nats-clusterip
           volumeMounts:
             - name: sotah-server-data
               mountPath: /srv/sotah-server
