--- a/deployments/nats-deployment.yaml
+++ b/deployments/nats-deployment.yaml
@@ -15,3 +15,10 @@ spec:
       containers:
         - name: nats-containers
           image: "nats"
+          resources:
+            limits:
+              cpu: "200m"
+              memory: "500Mi"
+            requests:
+              cpu: "100m"
+              memory: "100Mi"
