Start adding config to link influxdb and telegraf.

--- a/influx/configmaps/telegraf-configmap.yaml
+++ b/influx/configmaps/telegraf-configmap.yaml
@@ -8,3 +8,5 @@ data:
   outputs.conf: |
     [[outputs.influxdb]]
     urls = ["http://influxdb-clusterip:8086"]
+    username = "admin"
+    password = "admin"
