--- a/influx/configmaps/telegraf-configmap.yaml
+++ b/influx/configmaps/telegraf-configmap.yaml
@@ -18,7 +18,6 @@ data:
       precision = ""
       hostname = ""
       omit_hostname = false
-    [[outputs.influxdb]]
     [[inputs.cpu]]
       percpu = true
       totalcpu = true
@@ -33,7 +32,8 @@ data:
     [[inputs.swap]]
     [[inputs.system]]
   2-outputs.conf: |
-    [[outputs.influxdb]]
+    [[outputs.influxdb_v2]]
       urls = ["http://influxdb-clusterip:8086"]
-      username = "admin"
-      password = "admin"
+      token = "admin-token"
+      organization = "sotah"
+      bucket = "data"
