--- a/influx/statefulsets/influxdb-statefulset.yaml
+++ b/influx/statefulsets/influxdb-statefulset.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     matchLabels:
       app: influxdb-statefulset
-  serviceName: influxdb-service
+  serviceName: influxdb-clusterip
   replicas: 1
   template:
     metadata:
@@ -26,11 +26,15 @@ spec:
             - name: DOCKER_INFLUXDB_INIT_USERNAME
               value: admin
             - name: DOCKER_INFLUXDB_INIT_PASSWORD
-              value: admin
+              value: adminadmin
             - name: DOCKER_INFLUXDB_INIT_ORG
               value: sotah
             - name: DOCKER_INFLUXDB_INIT_BUCKET
               value: data
+            - name: DOCKER_INFLUXDB_INIT_ADMIN_TOKEN
+              value: admin-token
+            - name: INFLUXD_HTTP_BIND_ADDRESS
+              value: 0.0.0.0:8086
           volumeMounts:
             - name: influxdb-data
               mountPath: /var/lib/influxdb2
