--- a/influx/services/telegraf-clusterip.yaml
+++ b/influx/services/telegraf-clusterip.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sotah-server-prod-items-service
+  name: telegraf-clusterip
   labels:
-    app: sotah-server-prod-items-service
+    app: telegraf-clusterip
 spec:
   type: ClusterIP
   clusterIP: None
   selector:
-    app: sotah-server-prod-items-statefulset
+    app: telegraf-deployment
