--- a/influx/pvc/chronograf-pvc.yaml
+++ b/influx/pvc/chronograf-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: telegraf-pvc
+  name: chronograf-pvc
 spec:
   storageClassName: local-path
   accessModes:
