Start integrating syslog logging.

--- a/sotah/statefulsets/sotah-server-statefulset.yaml
+++ b/sotah/statefulsets/sotah-server-statefulset.yaml
@@ -47,6 +47,10 @@ spec:
                 secretKeyRef:
                   name: battlenet-creds
                   key: client-secret
+            - name: SYSLOG_HOST
+              value: telegraf-clusterip
+            - name: SYSLOG_PORT
+              value: "6514"
           volumeMounts:
             - name: sotah-server-data
               mountPath: /srv/sotah-server
