Update telegraf deployment to listen on syslog input.

--- a/influx/configmaps/telegraf-configmap.yaml
+++ b/influx/configmaps/telegraf-configmap.yaml
@@ -21,6 +21,8 @@ data:
   2-inputs.conf: |
     [[inputs.nats]]
       server = "http://nats-clusterip:8222"
+    [[inputs.syslog]]
+      server = "tcp://:6514"
   3-outputs.conf: |
     [[outputs.influxdb_v2]]
       urls = ["http://influxdb-clusterip:8086"]
