--- a/telegraf/base/clusterip.yaml
+++ b/telegraf/base/clusterip.yaml
@@ -1,9 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: telegraf-clusterip
-  labels:
-    app: telegraf-clusterip
+  name: clusterip
 spec:
   type: ClusterIP
   selector:
