--- a/telegraf/base/kustomization.yaml
+++ b/telegraf/base/kustomization.yaml
@@ -1,3 +1,8 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+namePrefix: telegraf-
+commonLabels:
+  app: telegraf
 resources:
   - clusterip.yaml
   - configmap.yaml
