--- a/influxdb/base/pvc.yaml
+++ b/influxdb/base/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: influxdb-pvc
+  name: pvc
 spec:
   storageClassName: ""
   accessModes:
