--- a/influxdb/linux/local-path-storage.yaml
+++ b/influxdb/linux/local-path-storage.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: influxdb-pvc
+  name: pvc
 spec:
-  storageClassName: hostpath
+  storageClassName: local-path
