--- a/influxdb/mac/hostpath.yaml
+++ b/influxdb/mac/hostpath.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: influxdb-pvc
+  name: pvc
 spec:
-  storageClassName: local-path
+  storageClassName: hostpath
