Refactor grafana app into kustomize templates.

--- a/grafana/base/statefulset.yaml
+++ b/grafana/base/statefulset.yaml
@@ -1,24 +1,21 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: grafana-statefulset
+  name: statefulset
 spec:
   selector:
     matchLabels:
-      app: grafana-statefulset
-  serviceName: grafana-nodeport
+      app: statefulset
+  serviceName: nodeport
   replicas: 1
   template:
-    metadata:
-      labels:
-        app: grafana-statefulset
     spec:
       terminationGracePeriodSeconds: 10
       securityContext:
         runAsUser: 472
         fsGroup: 472
       containers:
-        - name: grafana-container
+        - name: container
           image: grafana/grafana:8.2.3
           ports:
             - containerPort: 3000
@@ -31,9 +28,9 @@ spec:
             - name: GF_LOG_MODE
               value: console file
           volumeMounts:
-            - name: grafana-volume
+            - name: volume
               mountPath: /srv/grafana
       volumes:
-        - name: grafana-volume
+        - name: volume
           persistentVolumeClaim:
-            claimName: grafana-pvc
+            claimName: pvc
