--- a/grafana/base/nodeport.yaml
+++ b/grafana/base/nodeport.yaml
@@ -1,15 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: grafana-nodeport
-  labels:
-    app: grafana-nodeport
+  name: nodeport
 spec:
   type: NodePort
   selector:
-    app: grafana-statefulset
+    app: statefulset
   ports:
     - protocol: TCP
-      name: grafana-nodeport-client-ingress
+      name: nodeport-client-ingress
       port: 3000
       targetPort: 3000
