--- a/nats/base/clusterip.yaml
+++ b/nats/base/clusterip.yaml
@@ -1,19 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nats-clusterip
-  labels:
-    app: nats-clusterip
+  name: clusterip
 spec:
   type: ClusterIP
   selector:
-    app: nats-deployment
+    app: deployment
   ports:
     - protocol: TCP
-      name: nats-clusterip-client-ingress
+      name: clusterip-client-ingress
       port: 4222
       targetPort: 4222
     - protocol: TCP
-      name: nats-clusterip-server-ingress
+      name: clusterip-server-ingress
       port: 8222
       targetPort: 8222
