--- a/nats/base/deployment.yaml
+++ b/nats/base/deployment.yaml
@@ -1,20 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nats-deployment
+  name: deployment
 spec:
   selector:
     matchLabels:
-      app: nats-deployment
+      app: deployment
   replicas: 1
   template:
-    metadata:
-      labels:
-        app: nats-deployment
     spec:
       containers:
-        - name: nats-containers
-          image: "nats"
+        - name: containers
+          image: nats:2.6-alpine
           resources:
             limits:
               cpu: "200m"
