--- a/postgresql/base/clusterip.yaml
+++ b/postgresql/base/clusterip.yaml
@@ -1,15 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres-clusterip
-  labels:
-    app: postgres-clusterip
+  name: clusterip
 spec:
   type: ClusterIP
   selector:
-    app: postgres-statefulset
+    app: statefulset
   ports:
     - protocol: TCP
-      name: postgres-ingress
+      name: ingress
       port: 5432
       targetPort: 5432
