--- a/postgresql/base/pvc.yaml
+++ b/postgresql/base/pvc.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgres-pvc
+  name: pvc
 spec:
-  storageClassName: local-path
+  storageClassName: ""
   accessModes:
     - ReadWriteOnce
   resources:
