--- a/postgresql/base/statefulset.yaml
+++ b/postgresql/base/statefulset.yaml
@@ -1,21 +1,18 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: postgres-statefulset
+  name: statefulset
 spec:
   selector:
     matchLabels:
-      app: postgres-statefulset
-  serviceName: postgres-clusterip
+      app: statefulset
+  serviceName: clusterip
   replicas: 1
   template:
-    metadata:
-      labels:
-        app: postgres-statefulset
     spec:
       terminationGracePeriodSeconds: 10
       containers:
-        - name: postgres-container
+        - name: container
           image: "postgres:11"
           env:
             - name: POSTGRES_HOST_AUTH_METHOD
@@ -23,9 +20,9 @@ spec:
             - name: PGDATA
               value: /var/lib/postgresql/data
           volumeMounts:
-            - name: postgres-data
+            - name: volume
               mountPath: /var/lib/postgresql/data
       volumes:
-        - name: postgres-data
+        - name: volume
           persistentVolumeClaim:
-            claimName: postgres-pvc
+            claimName: pvc
