Move sotah-server to kustomize templates.

--- a/sotah/base/pvc.yaml
+++ b/sotah/base/pvc.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: sotah-server-pvc
+  name: pvc
 spec:
-  storageClassName: local-path
+  storageClassName: ""
   accessModes:
     - ReadWriteOnce
   resources:
