--- a/sotah-server/base/kustomization.yaml
+++ b/sotah-server/base/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namePrefix: sotah-
+namePrefix: sotah-server-
 commonLabels:
-  app: sotah
+  app: sotah-server
 resources:
   - pvc.yaml
   - clusterip.yaml
