--- a/sotah-api/base/deployment.yaml
+++ b/sotah-api/base/deployment.yaml
@@ -24,10 +24,10 @@ spec:
           command: ["npm", "start"]
           args: ["-s"]
           env:
-            - name: APP_KIND
-              value: public
-            - name: PORT
+            - name: PRIVATE_PORT
               value: "8080"
+            - name: PUBLIC_PORT
+              value: "8081"
             - name: CLIENT_HOST
               value: http://localhost:3000
             - name: GOOGLE_APPLICATION_CREDENTIALS
@@ -40,4 +40,6 @@ spec:
               value: postgresql-clusterip
           ports:
             - containerPort: 8080
+              name: private
+            - containerPort: 8081
               name: public
