Finish refactoring to make more sense.

--- a/sotah-ui/base/deployment.yaml
+++ b/sotah-ui/base/deployment.yaml
@@ -26,9 +26,9 @@ spec:
           env:
             - name: PORT
               value: "3000"
-            - name: PUBLIC_API_ENDPOINT
-              value: http://localhost:30001
-            - name: SERVER_API_ENDPOINT
+            - name: PUBLIC_SERVER_API_ENDPOINT
+              value: http://localhost:30002
+            - name: PRIVATE_SERVER_API_ENDPOINT
               value: http://sotah-api-nodeport:8080
           ports:
             - containerPort: 3000
