Refactor sotah-api to be statefulset, for logging.

--- a/templates/sotah-api/base/kustomization.yaml
+++ b/templates/sotah-api/base/kustomization.yaml
@@ -4,5 +4,6 @@ namePrefix: sotah-api-
 commonLabels:
   app: sotah-api
 resources:
+  - pvc.yaml
   - nodeport.yaml
-  - deployment.yaml
+  - statefulset.yaml
