--- a/templates/sotah-api/base/statefulset.yaml
+++ b/templates/sotah-api/base/statefulset.yaml
@@ -1,14 +1,16 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  name: deployment
+  name: statefulset
 spec:
   selector:
     matchLabels:
-      app: deployment
+      app: statefulset
+  serviceName: nodeport
   replicas: 1
   template:
     spec:
+      terminationGracePeriodSeconds: 10
       imagePullSecrets:
         - name: gcr-json-key
       containers:
@@ -38,8 +40,17 @@ spec:
               value: "4222"
             - name: DB_HOST
               value: postgresql-clusterip
+            - name: LOGS_DIR
+              value: /srv/app/logs
           ports:
             - containerPort: 8080
               name: private
             - containerPort: 8081
               name: public
+          volumeMounts:
+            - name: volume
+              mountPath: /srv/app/logs
+      volumes:
+        - name: volume
+          persistentVolumeClaim:
+            claimName: pvc
