--- a/templates/sotah-api/base/logs-pvc.yaml
+++ b/templates/sotah-api/base/logs-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc
+  name: logs-pvc
 spec:
   storageClassName: ""
   accessModes:
