Finish telegraf logs sidecar integration.

--- a/templates/sotah-api/base/kustomization.yaml
+++ b/templates/sotah-api/base/kustomization.yaml
@@ -4,6 +4,7 @@ namePrefix: sotah-api-
 commonLabels:
   app: sotah-api
 resources:
-  - pvc.yaml
+  - logs-pvc.yaml
   - nodeport.yaml
+  - telegraf-sidecar-configmap.yaml
   - statefulset.yaml
