--- a/templates/sotah-api/base/statefulset.yaml
+++ b/templates/sotah-api/base/statefulset.yaml
@@ -14,7 +14,7 @@ spec:
       imagePullSecrets:
         - name: gcr-json-key
       containers:
-        - name: container
+        - name: sotah-api-container
           image: "gcr.io/sotah-prod/api"
           resources:
             limits:
@@ -50,7 +50,22 @@ spec:
           volumeMounts:
             - name: logs-volume
               mountPath: /srv/app/logs
+        - name: telegraf-container
+          image: telegraf:1.20-alpine
+          command: ["telegraf"]
+          args: [
+              "--config", "/srv/telegraf/1-base.conf",
+              "--config-directory", "/srv/telegraf"
+          ]
+          volumeMounts:
+            - name: telegraf-sidecar-volume
+              mountPath: /srv/telegraf
+            - name: logs-volume
+              mountPath: /srv/sotah-logs
       volumes:
         - name: logs-volume
           persistentVolumeClaim:
             claimName: logs-pvc
+        - name: telegraf-sidecar-volume
+          configMap:
+            name: telegraf-sidecar-configmap
