--- a/templates/sotah-server-api/base/kustomization.yaml
+++ b/templates/sotah-server-api/base/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namePrefix: sotah-server-
+namePrefix: sotah-server-api-
 commonLabels:
-  app: sotah-server
+  app: sotah-server-api
 resources:
   - pvc.yaml
   - clusterip.yaml
