Add sotah-server-pvc for sharing pvc between statefulsets and jobs.

--- a/templates/sotah-server-job/base/job.yaml
+++ b/templates/sotah-server-job/base/job.yaml
@@ -25,7 +25,7 @@ spec:
             "-c", "/srv/sotah-server/config.json",
             "--cache-dir", "/srv/sotah-server/data",
             "-v", "debug",
-            "blah"
+            "download-auctions"
           ]
           env:
             - name: NATS_HOST
