--- a/templates/sotah-server-job/base/job.yaml
+++ b/templates/sotah-server-job/base/job.yaml
@@ -53,7 +53,7 @@ spec:
       volumes:
         - name: volume
           persistentVolumeClaim:
-            claimName: pvc
+            claimName: sotah-server-pvc-pvc
         - name: configmap
           configMap:
             name: configmap
